--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
             <input type="text" id="searchInput" placeholder="Search...">
             <select id="filterType">
                 <option value="">All Types</option>
-                <option value="main_timeline">Main Timeline</option>
+                <option value="main_story">Main Story</option>
+                <option value="prequel_story">Prequel Story</option>
                 <option value="event_story">Event Stories</option>
                 <option value="side_mission">Side Missions</option>
                 <option value="side_story">Side Stories</option>
