--- a/index.html
+++ b/index.html
@@ -24,6 +24,9 @@
 
     <div class="timeline-viewport" id="viewport">
         <div class="timeline" id="timeline"></div>
+            <svg id="connectionsSvg"></svg>
+</div>
+
     </div>
 
     <div class="modal" id="modal">
