--- a/index.html
+++ b/index.html
@@ -8,33 +8,83 @@
 </head>
 <body>
     <header class="header">
-        <h1>Game Lore Timeline</h1>
+        <div class="header-top">
+            <h1>Game Lore Timeline</h1>
+            <div class="header-actions">
+                <button id="bookmarksBtn" class="icon-btn" title="Bookmarks">★</button>
+                <button id="sortBtn" class="icon-btn" title="Sort">⇅</button>
+            </div>
+        </div>
         <div class="controls">
-            <input type="text" id="searchInput" placeholder="Search...">
+            <input type="text" id="searchInput" placeholder="Search entries, characters, locations, tags...">
             <select id="filterType">
                 <option value="">All Types</option>
                 <option value="main_story">Main Story</option>
-                <option value="prequel_story">Prequel Story</option>
                 <option value="event_story">Event Stories</option>
                 <option value="side_mission">Side Missions</option>
                 <option value="side_story">Side Stories</option>
             </select>
+            <select id="filterEra">
+                <option value="">All Eras</option>
+            </select>
+            <select id="filterCharacter">
+                <option value="">All Characters</option>
+            </select>
+            <select id="filterLocation">
+                <option value="">All Locations</option>
+            </select>
+        </div>
+        <div class="era-jump" id="eraJump">
+            <span>Jump to Era:</span>
         </div>
     </header>
 
     <div class="timeline-viewport" id="viewport">
         <div class="timeline" id="timeline"></div>
-            <svg id="connectionsSvg"></svg>
-</div>
+    </div>
 
+    <div class="minimap" id="minimap">
+        <div class="minimap-viewport" id="minimapViewport"></div>
+    </div>
+
+    <div class="zoom-controls">
+        <button class="zoom-btn" id="zoomIn">+</button>
+        <button class="zoom-btn" id="zoomOut">−</button>
+        <span id="zoomLevel">100%</span>
     </div>
 
     <div class="modal" id="modal">
         <div class="modal-content">
             <span class="close-btn" id="closeModal">&times;</span>
+            <div class="modal-nav">
+                <button id="prevEntry" class="nav-btn">← Prev</button>
+                <span id="entryCounter">1 of 1</span>
+                <button id="nextEntry" class="nav-btn">Next →</button>
+            </div>
             <div id="modalBody"></div>
+            <div class="modal-actions">
+                <button id="bookmarkBtn" class="action-btn">☆ Add to Bookmarks</button>
+                <button id="copyLinkBtn" class="action-btn">📋 Copy Link</button>
+            </div>
         </div>
     </div>
+
+    <div class="bookmarks-panel" id="bookmarksPanel">
+        <div class="panel-header">
+            <h3>Bookmarks</h3>
+            <button id="closeBookmarks" class="close-panel">&times;</button>
+        </div>
+        <div id="bookmarksList"></div>
+    </div>
+
+    <div class="legend">
+        <div class="legend-item"><span class="legend-dot" style="background:#ff6b6b"></span> Main Story</div>
+        <div class="legend-item"><span class="legend-dot" style="background:#4ecdc4"></span> Event Stories</div>
+        <div class="legend-item"><span class="legend-dot" style="background:#ffe66d"></span> Side Missions</div>
+        <div class="legend-item"><span class="legend-dot" style="background:#a29bfe"></span> Side Stories</div>
+    </div>
+
+    <div id="toast" class="toast"></div>
 
     <script src="data.js"></script>
     <script src="script.js"></script>
