--- a/index.html
+++ b/index.html
@@ -88,15 +88,6 @@
 
     <!-- Scripts (load in order) -->
     <script src="data.js"></script>
-    <script src="js/config.js"></script>
-    <script src="js/dom.js"></script>
-    <script src="js/utils.js"></script>
-    <script src="js/filters.js"></script>
-    <script src="js/connections.js"></script>
-    <script src="js/render.js"></script>
-    <script src="js/navigation.js"></script>
-    <script src="js/bookmarks.js"></script>
-    <script src="js/events.js"></script>
-    <script src="js/main.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
