--- a/index.html
+++ b/index.html
@@ -43,15 +43,7 @@
         <div class="timeline" id="timeline"></div>
     </div>
 
-    <div class="minimap" id="minimap">
-        <div class="minimap-viewport" id="minimapViewport"></div>
-    </div>
-
-    <div class="zoom-controls">
-        <button class="zoom-btn" id="zoomIn">+</button>
-        <button class="zoom-btn" id="zoomOut">−</button>
-        <span id="zoomLevel">100%</span>
-    </div>
+    <div class="minimap" id="minimap"></div>
 
     <div class="modal" id="modal">
         <div class="modal-content">
@@ -86,7 +78,6 @@
 
     <div id="toast" class="toast"></div>
 
-    <!-- Scripts (load in order) -->
     <script src="data.js"></script>
     <script src="script.js"></script>
 </body>
