--- a/index.html
+++ b/index.html
@@ -39,40 +39,43 @@
         </div>
     </header>
 
-    <div class="timelines-container" id="timelinesContainer">
-        <!-- Lost Relics Timeline -->
-        <div class="timeline-track lost-relics-track" id="lostRelicsTrack">
-            <div class="track-label">Lost Relics</div>
-            <div class="track-content">
-                <div class="timeline-items" id="lostRelicsTimeline"></div>
-            </div>
-        </div>
+<div class="timelines-container" id="timelinesContainer">
+    <!-- Era Backgrounds -->
+    <div class="era-backgrounds" id="eraBackgrounds"></div>
 
-        <!-- Main Timeline -->
-        <div class="timeline-track main-track" id="mainTrack">
-            <div class="track-label">Main Story</div>
-            <div class="track-content">
-                <div class="timeline-items" id="mainTimeline"></div>
-            </div>
-        </div>
-
-        <!-- Side Missions Timeline -->
-        <div class="timeline-track side-missions-track" id="sideMissionsTrack">
-            <div class="track-label">Side Missions</div>
-            <div class="track-content">
-                <div class="timeline-items" id="sideMissionsTimeline"></div>
-            </div>
-        </div>
-
-        <!-- Secondary Timeline -->
-        <div class="timeline-track secondary-track" id="secondaryTrack">
-            <div class="track-label">Side Stories</div>
-            <div class="track-content">
-                <div class="timeline-items" id="secondaryTimeline"></div>
-            </div>
+    <!-- Lost Relics Timeline -->
+    <div class="timeline-track lost-relics-track" id="lostRelicsTrack">
+        <div class="track-label">Lost Relics</div>
+        <div class="track-content">
+            <div class="timeline-items" id="lostRelicsTimeline"></div>
         </div>
     </div>
 
+    <!-- Main Timeline -->
+    <div class="timeline-track main-track" id="mainTrack">
+        <div class="track-label">Main Story</div>
+        <div class="track-content">
+            <div class="timeline-items" id="mainTimeline"></div>
+        </div>
+    </div>
+
+    <!-- Side Missions Timeline -->
+    <div class="timeline-track side-missions-track" id="sideMissionsTrack">
+        <div class="track-label">Side Missions</div>
+        <div class="track-content">
+            <div class="timeline-items" id="sideMissionsTimeline"></div>
+        </div>
+    </div>
+
+    <!-- Secondary Timeline -->
+    <div class="timeline-track secondary-track" id="secondaryTrack">
+        <div class="track-label">Side Stories</div>
+        <div class="track-content">
+            <div class="timeline-items" id="secondaryTimeline"></div>
+        </div>
+    </div>
+</div>
+    
     <div class="modal" id="modal">
         <div class="modal-content">
             <span class="close-btn" id="closeModal">&times;</span>
