--- a/index.html
+++ b/index.html
@@ -39,43 +39,10 @@
         </div>
     </header>
 
-<div class="timelines-container" id="timelinesContainer">
-    <!-- Era Backgrounds -->
-    <div class="era-backgrounds" id="eraBackgrounds"></div>
-
-    <!-- Lost Relics Timeline -->
-    <div class="timeline-track lost-relics-track" id="lostRelicsTrack">
-        <div class="track-label">Lost Relics</div>
-        <div class="track-content">
-            <div class="timeline-items" id="lostRelicsTimeline"></div>
-        </div>
+    <div class="timeline-viewport" id="viewport">
+        <div class="timeline" id="timeline"></div>
     </div>
 
-    <!-- Main Timeline -->
-    <div class="timeline-track main-track" id="mainTrack">
-        <div class="track-label">Main Story</div>
-        <div class="track-content">
-            <div class="timeline-items" id="mainTimeline"></div>
-        </div>
-    </div>
-
-    <!-- Side Missions Timeline -->
-    <div class="timeline-track side-missions-track" id="sideMissionsTrack">
-        <div class="track-label">Side Missions</div>
-        <div class="track-content">
-            <div class="timeline-items" id="sideMissionsTimeline"></div>
-        </div>
-    </div>
-
-    <!-- Secondary Timeline -->
-    <div class="timeline-track secondary-track" id="secondaryTrack">
-        <div class="track-label">Side Stories</div>
-        <div class="track-content">
-            <div class="timeline-items" id="secondaryTimeline"></div>
-        </div>
-    </div>
-</div>
-    
     <div class="modal" id="modal">
         <div class="modal-content">
             <span class="close-btn" id="closeModal">&times;</span>
@@ -105,7 +72,6 @@
         <div class="legend-item"><span class="legend-dot" style="background:#4ecdc4"></span> Event Stories</div>
         <div class="legend-item"><span class="legend-dot" style="background:#ffe66d"></span> Side Missions</div>
         <div class="legend-item"><span class="legend-dot" style="background:#a29bfe"></span> Side Stories</div>
-        <div class="legend-item"><span class="legend-dot" style="background:#ff9f43"></span> Lost Relics</div>
     </div>
 
     <div id="toast" class="toast"></div>
